# FlakeAutoFind

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FlakeAutoFind  README.md  hthick.py
Documentation/: doc.aux  doc.fdb_latexmk  doc.fls  doc.tex  doc.toc
images/: 6-9-100x df.tif
presentation/: cvpres.tex  hw.sty
python/: README.md  hthick.py  test.py
python/scr_hthick/: faf_fns.py
src/: CMakeLists.txt  faf_fns.cc  faf_fns.h  flakeautofind.cc
src_hthick/: __init__.py  faf_fns.py
